--- a/style.css
+++ b/style.css
@@ -217,23 +217,22 @@ button {
 }
 
 button:hover {
-  background-color: hsl(154, 59%, 61%);
   cursor: pointer;
-  box-shadow: 0px 4px 0 hsl(154, 59%, 50%);
 }
 
 button.active {
-  filter: brightness(0.8);
-  transform: scale(0.8);
-  animation: zoomOut 0.5s ease-in-out 0s 1 forwards;
+  animation: zoomOut 0.3s ease-in-out 0s 1,
+    zoomIn 0.3s ease-in-out 0.3s 1 forwards;
 }
 
 button.tryAgain {
+  filter: brightness(1);
+  transform: scale(1);
   animation: zoomIn 0.25s ease-in-out 0s 1 forwards;
 }
 
 button.inValid {
-  animation: headShake 0.25s ease-in-out 0s 1 forwards;
+  animation: headShake 0.4s ease-in-out 0s 1 forwards;
 }
 
 @keyframes zoomIn {
@@ -271,23 +270,23 @@ button.inValid {
   }
 
   6.5% {
-    -webkit-transform: translateX(-6px) rotateY(-9deg);
-    transform: translateX(-6px) rotateY(-9deg);
+    -webkit-transform: translateX(-10px) rotateY(-10deg);
+    transform: translateX(-10px) rotateY(-10deg);
   }
 
   18.5% {
-    -webkit-transform: translateX(5px) rotateY(7deg);
-    transform: translateX(5px) rotateY(7deg);
+    -webkit-transform: translateX(7px) rotateY(8deg);
+    transform: translateX(7px) rotateY(8deg);
   }
 
   31.5% {
-    -webkit-transform: translateX(-3px) rotateY(-5deg);
-    transform: translateX(-3px) rotateY(-5deg);
+    -webkit-transform: translateX(-4px) rotateY(-6deg);
+    transform: translateX(-4px) rotateY(-6deg);
   }
 
   43.5% {
-    -webkit-transform: translateX(2px) rotateY(3deg);
-    transform: translateX(2px) rotateY(3deg);
+    -webkit-transform: translateX(3px) rotateY(4deg);
+    transform: translateX(3px) rotateY(4deg);
   }
 
   50% {
