--- a/style.css
+++ b/style.css
@@ -221,14 +221,7 @@ button:hover {
 }
 
 button.active {
-  animation: zoomOut 0.3s ease-in-out 0s 1,
-    zoomIn 0.3s ease-in-out 0.3s 1 forwards;
-}
-
-button.tryAgain {
-  filter: brightness(1);
-  transform: scale(1);
-  animation: zoomIn 0.25s ease-in-out 0s 1 forwards;
+  animation: zoomOut 0.3s linear 0s 1, zoomIn 0.3s ease-in-out 0.3s 1 forwards;
 }
 
 button.inValid {
