--- a/success.css
+++ b/success.css
@@ -148,14 +148,7 @@ body {
 }
 
 .Button.active {
-  animation: zoomOut 0.3s ease-in-out 0s 1,
-    zoomIn 0.3s ease-in-out 0.3s 1 forwards;
-}
-
-.Button.tryAgain {
-  filter: brightness(1);
-  transform: scale(1);
-  animation: zoomIn 0.5s ease-in-out 0.5s 1 forwards;
+  animation: zoomOut 0.3s linear 0s 1, zoomIn 0.3s ease-in-out 0.3s 1 forwards;
 }
 
 @keyframes zoomIn {
