--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ button:hover {
 }
 
 button.active {
-  animation: zoomOut 0.4s linear 0s 1, zoomIn 0.3s ease-in-out 0.4s 1 forwards;
+  animation: zoomOut 0.4s linear 0s 1, zoomIn 0.3s ease-in-out 0.4s 1s;
 }
 
 button.inValid {
