--- a/style.css
+++ b/style.css
@@ -221,8 +221,10 @@ button:hover {
 }
 
 button.active {
-  animation: zoomOut 0.4s linear 0s 1, zoomIn 0.3s ease-in-out 0.4s 1s;
+  animation: 0.4s ease-in-out 0s zoomOut, 0.3s ease-in-out 0.4s zoomIn;
 }
+
+/* zoomIn 0.3s ease-in-out 0.4s 1s */
 
 button.inValid {
   animation: headShake 0.4s ease-in-out 0s 1 forwards;
