--- a/success.css
+++ b/success.css
@@ -148,7 +148,7 @@ body {
 }
 
 .Button.active {
-  animation: zoomOut 0.4s linear 0s 1, zoomIn 0.3s ease-in-out 0.4s 1;
+  animation: 0.4s ease-in-out 0s zoomOut, 0.3s ease-in-out 0.4s zoomIn;
 }
 
 @keyframes zoomIn {
